--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,7 @@ body {
   position:fixed;
 }
 canvas {
-  cursor: -webkit-grab, grab, move;
+  cursor: move;
+  cursor: grab;
+  cursor: -webkit-grab;
 }
