--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,31 @@ body {
   margin:0;
   background:#1B8547;
   position:fixed;
+  color: #1B8547;
+}
+a {
+	color: #1B8547;
+}
+a:hover {
+	color: #FAA252;
 }
 canvas {
   cursor: move;
   cursor: grab;
   cursor: -webkit-grab;
+  outline: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+#signature {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background: white;
+	text-align: right;
+	padding: .2em .6em .6em .4em;
+
+	font-size: 10px;
+	font-family: Helvetica, Arial, sans-serif;
+	line-height: 1.3;
+	border-top-left-radius: 4px;
 }
